# yugioh-clone

./: .gitignore  Dockerfile  README.md  bug.txt  classDiagram (12).vpd  skripta.sh  useCaseDiagram
Yugioh/: .clang-format  CMakeLists.txt  Dockerfile  Yugioh.pro  a.out  compile_ui.sh  conanfile.txt  decksettings.cpp  decksettings.h  decksettings.ui  main.cpp  resources.qrc  run-clang-format.py
Yugioh/headers/: BotPlayer.h  Card.h  CardList.h  CardMenu.h  Deck.h  DeckSettings.h  EffectActivator.h  EffectRequirement.h  Field.h  FieldZone.h  Game.h  GamePhase.h  GameSettings.h  Graveyard.h  Hand.h  MonsterZone.h  Monstercard.h  Player.h  Serializer.h  SpellTrapZone.h  Spellcard.h  Trapcard.h  Zone.h  log.txt  mainmenu.h  mainwindow.h  player.hpp  profilesettings.h  ui_decksettings.h  ui_mainmenu.h  ui_mainwindow.h
Yugioh/resources/: deck_settings.json  kaiba.json  yugi.json
Yugioh/sources/: BotPlayer.cpp  BotPlayer.h  Card.cpp  CardList.cpp  CardMenu.cpp  Deck.cpp  DeckSettings.cpp  DeckSettings.ui  EffectActivator.cpp  EffectRequirement.cpp  Field.cpp  FieldZone.cpp  Game.cpp  GamePhase.cpp  GameSettings.cpp  GameSettings.ui  Graveyard.cpp  Hand.cpp  MonsterZone.cpp  Monstercard.cpp  Player.cpp  Serializer.cpp  SpellTrapZone.cpp  Spellcard.cpp  Trapcard.cpp  Zone.cpp  a.out  log.txt  main.cpp  mainmenu.cpp  mainmenu.ui  mainwindow.cpp  mainwindow.ui  newGame.cpp  player.cpp  profilesettings.cpp  profilesettings.h  profilesettings.ui
Yugioh/specification/: classDiagram.vpd  diagramComponentsFinal.vpd
Yugioh/specification/deck_editor/: description_of_use_case_for_deck_editor.txt  sequence_diagram_deck_editor.vpd
Yugioh/specification/diagramSources/: YugiohClassDiagram.drawio  classDiagram.drawio
Yugioh/specification/play_game/: playGame_sequence_diagram.vpd
Yugioh/specification/useCases/gameSettings/: descriptionOfGameSettingsUseCase.txt  sequenceDiagramGameSettings.vpd
Yugioh/specification/useCases/loadGame/: descriptionOfLoadGameUseCases.txt  sequenceDiagramLoadGame.vpd
Yugioh/specification/useCases/playGame/: playerSequenceDiagram.txt
Yugioh/specification/useCases/profleSettings/: descriptionUseCaseProfileSettings.txt  sequenceUseCaseProfileSettings.vpd
Yugioh/tests/: catch.cpp  tests.cpp
Yugioh/tests/tests/: catch.cpp  tests.cpp
Yugioh/yugioh-server/: .gitignore  CMakeLists.txt  Dockerfile  yugioh-server.pro
Yugioh/yugioh-server/headers/: MyTcpServer.h
Yugioh/yugioh-server/sources/: MyTcpServer.cpp  main.cpp
build-Yugioh-Desktop_Qt_5_15_2_GCC_64bit-Release/.qtc_clangd/: compile_commands.json
build-Yugioh-Desktop_Qt_5_15_2_GCC_64bit-Release/.qtc_clangd/.cache/clangd/index/: Card.cpp.3D8A521724A35418.idx  Card.h.EF2C6B4201171FE8.idx  CardList.cpp.482D378897B2D7CD.idx  CardList.h.760D73A0E3C8C7EF.idx  CardMenu.cpp.8BD7B2F5DA5C90B4.idx  CardMenu.h.35B63D25384299A6.idx  Deck.cpp.DB9E38D076C7C076.idx  Deck.h.DA514B9406DC69B8.idx  EffectActivator.cpp.58404995FD6226CA.idx  EffectActivator.h.0C2080DF8204530F.idx  Game.cpp.FC580D94E64006D5.idx  Game.h.960CEB4CD6585306.idx  GamePhase.cpp.E8F3F8241D8F8F18.idx  GamePhase.h.676C7169A92D38B7.idx  GameSettings.cpp.647B38E37DAEE404.idx  GameSettings.h.7CC61947C56033BC.idx  Graveyard.cpp.6B499A4A440BC827.idx  Graveyard.h.8CBE5B68C30E5865.idx  Hand.cpp.1C31AD7EB4FE864C.idx  Hand.h.BD922A7F7A4AB8C1.idx  MonsterZone.cpp.840DFFF4E6AB3028.idx  MonsterZone.h.BDFD0FCE3FE5F5ED.idx  Monstercard.cpp.A86FCD0150F30805.idx  Monstercard.h.5307DE9000F8E247.idx  Player.cpp.2031FC0A417863EB.idx  Player.h.98E0A9ECB02E1102.idx  QApplication.EA6427A7FD8B4548.idx  QComboBox.CAAA02353F859168.idx  QDialog.3B4E5E7C59E45292.idx  QDialogButtonBox.C781FF1B2D00C6FF.idx  QDir.EBD21451F44839ED.idx  QEvent.2D2C1FAF1F506671.idx  QGraphicsItem.3909AAC01D319890.idx  QGraphicsLayout.071FC4813FF7518E.idx  QGraphicsPixmapItem.84C2810F1D2A94AA.idx  QGraphicsRectItem.DB40EA769E88CCB5.idx  QGraphicsScene.CEC4BD0C01C96393.idx  QGraphicsSceneHoverEvent.F16A28500E8BA9D4.idx  QGraphicsSceneMouseEvent.CC3292C8211A7C0D.idx  QGraphicsView.521084A811D5B116.idx  (+344 more)
